Se crea la sección principal del encriptador con un textarea el div donde va aparecer el mensaje y los botones

--- a/index.html
+++ b/index.html
@@ -20,5 +20,19 @@
             <h1 class="titulo">Encriptador Alura</h1>
         </div>
     </header>
+    <main>
+        <section class="principal">
+            <div class="mensaje-usuario">
+                <textarea name="" id="" cols="100" rows="22"></textarea>
+                <div class="botones">
+                    <button id="boton1" class="boton">Encriptar</button>
+                    <button id="boton2" class="boton">Desencriptar</button>
+                </div>
+            </div>
+            <div class="mensaje-encriptado">
+                <p></p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
