--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <p>Solo letras minúsculas y sin acentos</p>
                     </div>
                     <div class="botones">
-                        <button id="boton1" class="boton">Encriptar</button>
+                        <button onclick="encriptar();" id="boton1" class="boton">Encriptar</button>
                         <button id="boton2" class="boton">Desencriptar</button>
                     </div>
                 </div>
@@ -39,10 +39,15 @@
             </div>
             <div class="mensaje-encriptado">
                 <img src="img/buscando.png" alt="personjae con una lupa">
-                <h2>Ningún mensaje fue encontrado</h2>
-                <p>Ingresa el texto que desees encriptar o desencriptar</p>
+                <h2 id="titulo2"></h2>
+                <div class="mensaje-indicacion">
+                    <p id="mensaje-inicial"></p>
+                    <p id="texto-formateado"></p>
+                </div>
             </div>
         </section>
     </main>
+
+    <script src="app.js"></script>
 </body>
 </html>
