Se crea las funciones para encriptar y desencriptar el texto que el usuario ha ingresado

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                     </div>
                     <div class="botones">
                         <button onclick="encriptar();" id="boton1" class="boton">Encriptar</button>
-                        <button id="boton2" class="boton">Desencriptar</button>
+                        <button onclick="desencriptar();" id="boton2" class="boton">Desencriptar</button>
                     </div>
                 </div>
-                
             </div>
             <div class="mensaje-encriptado">
                 <img src="img/buscando.png" alt="personjae con una lupa">
