Se añade el boton para copiar y la función que hara que el texto se copie en portapales

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <button onclick="desencriptar();" id="boton2" class="boton">Desencriptar</button>
                     </div>
                 </div>
+                <div id="portapapeles" class="portapapeless">
+                    <p id="mensaje-copiado"></p>
+                </div>
             </div>
             <div class="mensaje-encriptado">
                 <img src="img/buscando.png" alt="personjae con una lupa">
@@ -43,7 +46,9 @@
                     <p id="mensaje-inicial"></p>
                     <p id="texto-formateado"></p>
                 </div>
+                <button id="copiar" class="boton">Copiar</button>
             </div>
+            
         </section>
     </main>
 
