Se organiza el responsive de algunos disposivos que quedaron faltando

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="mensaje-encriptado">
           <div class="mensaje-indicacion">
-            <img src="img/buscando.png" alt="personjae con una lupa" />
+            <img src="img/Muñeco.png" alt="personjae con una lupa" />
             <h2 id="titulo2"></h2>
             <p id="mensaje-inicial"></p>
           </div>
